--- a/src/styles/Start.module.css
+++ b/src/styles/Start.module.css
@@ -1,8 +1,21 @@
 .container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+}
+.list,
+.grid {
+  height: 100vh;
+  padding: 10px 15px;
+}
+.list {
+  -webkit-flex: 0 1 auto;
+  -ms-flex: 0 1 auto;
+  flex: 0 1 auto;
+  min-width: 250px;
+}
+.grid {
+  -webkit-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
 }
