--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,12 +5,12 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-
 a {
-  color: #0070f3;
   text-decoration: none;
 }
-
 * {
   box-sizing: border-box;
+}
+.container {
+  min-height: 100vh;
 }
