--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,11 +2,16 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Inter", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-weight: 400;
 }
 a {
   text-decoration: none;
+  font-size: 0.9rem;
+}
+a > label:hover {
+  cursor: pointer;
 }
 * {
   box-sizing: border-box;
