Alteração no ícone da barra lateral

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -65,3 +65,10 @@
 .dark .bgItemBar:hover {
   background-color: var(--darkLight2);
 }
+
+.light .fillSVG {
+  fill: var(--lightText);
+}
+.dark .fillSVG {
+  fill: var(--darkText);
+}
