--- a/src/styles/components/ShortcutGrid.module.css
+++ b/src/styles/components/ShortcutGrid.module.css
@@ -35,3 +35,15 @@
   top: 50%;
   transform: translate(-50%, -50%);
 }
+.group {
+  flex: 1 0 auto;
+  width: 100%;
+  padding: 0 0.125rem;
+}
+.input {
+  padding-left: 0;
+  padding-right: 0;
+}
+.input:focus {
+  padding: 0.5rem 0.5rem;
+}
